# AQA_Narizhnyy

./: CMakeLists.txt  README.md  main.cpp
qml/: Main.qml
qml/components/: HButton.qml  HLabel.qml  HamiltonButton.qml  IconHButton.qml  IconTextHButton.qml  Theme.qml
